WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135988
Native library inlining crashes when module isn't found
https://bugs.webkit.org/show_bug.cgi?id=135988
Summary
Native library inlining crashes when module isn't found
Matthew Mirman
Reported
2014-08-15 11:44:36 PDT
Patch forthcoming.
Attachments
fixed native library inlining in the ftl segfaulting
(4.64 KB, patch)
2014-08-15 11:56 PDT
,
Matthew Mirman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matthew Mirman
Comment 1
2014-08-15 11:56:39 PDT
Created
attachment 236663
[details]
fixed native library inlining in the ftl segfaulting Also abstracts out an "Options::verboseCompilation"
Geoffrey Garen
Comment 2
2014-08-15 13:30:50 PDT
Comment on
attachment 236663
[details]
fixed native library inlining in the ftl segfaulting View in context:
https://bugs.webkit.org/attachment.cgi?id=236663&action=review
> Source/JavaScriptCore/ChangeLog:15 > + (JSC::FTL::LowerDFGToLLVM::compilePutById): > + abstracted out Options::verboseCompilation as was the case in the rest of the file. > + (JSC::FTL::LowerDFGToLLVM::compileNativeCallOrConstruct): > + (JSC::FTL::LowerDFGToLLVM::getModuleByPathForSymbol): > + added output error messages for llvm module loading.
Best to capitalize these sentences.
WebKit Commit Bot
Comment 3
2014-08-15 14:04:48 PDT
Comment on
attachment 236663
[details]
fixed native library inlining in the ftl segfaulting Clearing flags on attachment: 236663 Committed
r172648
: <
http://trac.webkit.org/changeset/172648
>
WebKit Commit Bot
Comment 4
2014-08-15 14:04:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug