Made native inlining errors not segfault. https://bugs.webkit.org/show_bug.cgi?id=135988

Reviewed by Geoffrey Garen.

* ftl/FTLAbbreviations.h:
(JSC::FTL::disposeMessage): Added.
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compilePutById):
abstracted out Options::verboseCompilation as was the case in the rest of the file.
(JSC::FTL::LowerDFGToLLVM::compileNativeCallOrConstruct):
(JSC::FTL::LowerDFGToLLVM::getModuleByPathForSymbol):
added output error messages for llvm module loading.


Canonical link: https://commits.webkit.org/153843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172648 268f45cc-cd09-0410-ab3c-d52691b4dbfc